force-app/main/default/objects/ProductSpecification__c/ProductSpecification__c.object-meta.xml
<CustomObject>
    <label>機器仕様</label>
    <nameField>
        <displayFormat>PD-{0000000}</displayFormat>
        <label>機器仕様番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>