force-app/main/default/objects/ProductSpecification__c/fields/ACElectricity__c.field-meta.xml
<CustomField>
    <fullName>ACElectricity__c</fullName>
    <label>ＡＣ側地絡過電圧継電器(OVGR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>