force-app/main/default/objects/ProductSpecification__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>用途</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>非常用</fullName>
            </value>
            <value>
                <fullName>常用防災兼用</fullName>
            </value>
            <value>
                <fullName>常用</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>