force-app/main/default/objects/ProductSpecification__c/fields/AuxiliaryMachinePanel__c.field-meta.xml
<CustomField>
    <fullName>AuxiliaryMachinePanel__c</fullName>
    <label>補機盤</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>