force-app/main/default/objects/ProductSpecification__c/fields/BackupPercent__c.field-meta.xml
<CustomField>
    <fullName>BackupPercent__c</fullName>
    <label>予備品率</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>