force-app/main/default/objects/ProductSpecification__c/fields/BatteryLoadPowerFactor__c.field-meta.xml
<CustomField>
    <fullName>BatteryLoadPowerFactor__c</fullName>
    <label>蓄電池負荷力率</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.8</fullName>
            </value>
            <value>
                <fullName>0.9</fullName>
            </value>
            <value>
                <fullName>1.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>