force-app/main/default/objects/ProductSpecification__c/fields/BatteryStorageSystem__c.field-meta.xml
<CustomField>
    <fullName>BatteryStorageSystem__c</fullName>
    <label>蓄電池収納方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>キュービクル収納式</fullName>
            </value>
            <value>
                <fullName>架台収納式</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>