force-app/main/default/objects/ProductSpecification__c/fields/BatteryType__c.field-meta.xml
<CustomField>
    <fullName>BatteryType__c</fullName>
    <label>蓄電池種類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCL</fullName>
            </value>
            <value>
                <fullName>HF</fullName>
            </value>
            <value>
                <fullName>MSE</fullName>
            </value>
            <value>
                <fullName>SUB</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>FVH</fullName>
            </value>
            <value>
                <fullName>長寿命MSE</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>