force-app/main/default/objects/ProductSpecification__c/fields/BatteryTypeOther__c.field-meta.xml
<CustomField>
    <fullName>BatteryTypeOther__c</fullName>
    <label>蓄電池種類＿その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>