force-app/main/default/objects/ProductSpecification__c/fields/BoardSpecification__c.field-meta.xml
<CustomField>
    <fullName>BoardSpecification__c</fullName>
    <label>盤仕様（屋外自立）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>