force-app/main/default/objects/ProductSpecification__c/fields/Capacity02__c.field-meta.xml
<CustomField>
    <fullName>Capacity02__c</fullName>
    <label>容量（6kW）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>