force-app/main/default/objects/ProductSpecification__c/fields/CarryInConditions__c.field-meta.xml
<CustomField>
    <fullName>CarryInConditions__c</fullName>
    <label>搬入条件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一括出荷</fullName>
            </value>
            <value>
                <fullName>分割出荷</fullName>
            </value>
            <value>
                <fullName>チャンネルベース先送有</fullName>
            </value>
            <value>
                <fullName>チャンネルベース先送無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>