force-app/main/default/objects/ProductSpecification__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>技術提案メーカー</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>三菱電機</fullName>
            </value>
            <value>
                <fullName>日立製作所</fullName>
            </value>
            <value>
                <fullName>東芝</fullName>
            </value>
            <value>
                <fullName>富士電機</fullName>
            </value>
            <value>
                <fullName>明電舎</fullName>
            </value>
            <value>
                <fullName>日新電機</fullName>
            </value>
            <value>
                <fullName>東光高岳</fullName>
            </value>
            <value>
                <fullName>ＧＳユアサ</fullName>
            </value>
            <value>
                <fullName>カワサキマシンシステムズ</fullName>
            </value>
            <value>
                <fullName>ヤンマー</fullName>
            </value>
            <value>
                <fullName>IHI原動機（旧：新潟原動機）</fullName>
            </value>
            <value>
                <fullName>アズビル</fullName>
            </value>
            <value>
                <fullName>ジョンソン</fullName>
            </value>
            <value>
                <fullName>ファシーマ</fullName>
            </value>
            <value>
                <fullName>パナソニック</fullName>
            </value>
            <value>
                <fullName>ソニービジネスソリューションズ</fullName>
            </value>
            <value>
                <fullName>富士通フロンテック</fullName>
            </value>
            <value>
                <fullName>ダクトロニクス</fullName>
            </value>
            <value>
                <fullName>ニチコン</fullName>
            </value>
            <value>
                <fullName>アイケイエス</fullName>
            </value>
            <value>
                <fullName>その他フリー項目</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>