force-app/main/default/objects/ProductSpecification__c/fields/CompetitorsOther__c.field-meta.xml
<CustomField>
    <fullName>CompetitorsOther__c</fullName>
    <label>技術提案メーカー＿その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>