force-app/main/default/objects/ProductSpecification__c/fields/Connect__c.field-meta.xml
<CustomField>
    <fullName>Connect__c</fullName>
    <label>連系（低圧連系）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>