force-app/main/default/objects/ProductSpecification__c/fields/ConstructionDistinction__c.field-meta.xml
<CustomField>
    <fullName>ConstructionDistinction__c</fullName>
    <formula>TEXT(Opp5__r.ConstructionDistinction__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>工事区分</label>
    <type>Text</type>
</CustomField>