force-app/main/default/objects/ProductSpecification__c/fields/ControlledPower__c.field-meta.xml
<CustomField>
    <fullName>ControlledPower__c</fullName>
    <label>制御電源</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>外部</fullName>
            </value>
            <value>
                <fullName>内部</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>