force-app/main/default/objects/ProductSpecification__c/fields/ControlPoints__c.field-meta.xml
<CustomField>
    <fullName>ControlPoints__c</fullName>
    <label>管理点数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>