force-app/main/default/objects/ProductSpecification__c/fields/dB__c.field-meta.xml
<CustomField>
    <fullName>dB__c</fullName>
    <label>騒音値（dB）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>標準</fullName>
            </value>
            <value>
                <fullName>85dB</fullName>
            </value>
            <value>
                <fullName>75dB</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>