force-app/main/default/objects/ProductSpecification__c/fields/dBOther__c.field-meta.xml
<CustomField>
    <fullName>dBOther__c</fullName>
    <label>騒音値（dB）＿その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>