force-app/main/default/objects/ProductSpecification__c/fields/DCPowerSupply__c.field-meta.xml
<CustomField>
    <fullName>DCPowerSupply__c</fullName>
    <label>直流電源</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有長寿命ＭＳＥ</fullName>
            </value>
            <value>
                <fullName>有ＭＳＥ</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>