force-app/main/default/objects/ProductSpecification__c/fields/DCPowerSupplyForStarting__c.field-meta.xml
<CustomField>
    <fullName>DCPowerSupplyForStarting__c</fullName>
    <label>始動用直流電源</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有（長寿命ＭＳＥ）</fullName>
            </value>
            <value>
                <fullName>有（ＭＳＥ）</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>