force-app/main/default/objects/ProductSpecification__c/fields/DesignatedByStorageBatteryManufacturer__c.field-meta.xml
<CustomField>
    <fullName>DesignatedByStorageBatteryManufacturer__c</fullName>
    <label>蓄電池メーカー指定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有（ＧＳ）</fullName>
            </value>
            <value>
                <fullName>有（日立化成）</fullName>
            </value>
            <value>
                <fullName>有（古河）</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>