force-app/main/default/objects/ProductSpecification__c/fields/DrivingTime__c.field-meta.xml
<CustomField>
    <fullName>DrivingTime__c</fullName>
    <label>運転時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1時間</fullName>
            </value>
            <value>
                <fullName>10時間</fullName>
            </value>
            <value>
                <fullName>24時間</fullName>
            </value>
            <value>
                <fullName>72時間</fullName>
            </value>
            <value>
                <fullName>168時間</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>