force-app/main/default/objects/ProductSpecification__c/fields/DrivingTimeOther__c.field-meta.xml
<CustomField>
    <fullName>DrivingTimeOther__c</fullName>
    <label>運転時間＿その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>