force-app/main/default/objects/ProductSpecification__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <label>エンジン種類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D/G</fullName>
            </value>
            <value>
                <fullName>GT/G</fullName>
            </value>
            <value>
                <fullName>デュアル</fullName>
            </value>
            <value>
                <fullName>GTG</fullName>
            </value>
            <value>
                <fullName>GE/G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>