force-app/main/default/objects/ProductSpecification__c/fields/EngineManufacturerDesignation__c.field-meta.xml
<CustomField>
    <fullName>EngineManufacturerDesignation__c</fullName>
    <label>エンジンメーカー指定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無</fullName>
            </value>
            <value>
                <fullName>有（三菱重工）</fullName>
            </value>
            <value>
                <fullName>有（ヤンマー）</fullName>
            </value>
            <value>
                <fullName>有（カワサキマシンシステムズ）</fullName>
            </value>
            <value>
                <fullName>有（IHI原動機（旧：新潟）））</fullName>
            </value>
            <value>
                <fullName>有（その他）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>