force-app/main/default/objects/ProductSpecification__c/fields/EnginePower__c.field-meta.xml
<CustomField>
    <fullName>EnginePower__c</fullName>
    <label>エンジン出力</label>
    <length>255</length>
    <type>Text</type>
</CustomField>