force-app/main/default/objects/ProductSpecification__c/fields/EquipmentDeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>EquipmentDeliveryTime__c</fullName>
    <inlineHelpText>新規作成時に場所別の機器搬入時期が自動入力されます。</inlineHelpText>
    <label>機器搬入時期</label>
    <type>Date</type>
</CustomField>