force-app/main/default/objects/ProductSpecification__c/fields/ExhaustSilencer__c.field-meta.xml
<CustomField>
    <fullName>ExhaustSilencer__c</fullName>
    <label>排気消音器</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>標準</fullName>
            </value>
            <value>
                <fullName>85dB</fullName>
            </value>
            <value>
                <fullName>75dB</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>