force-app/main/default/objects/ProductSpecification__c/fields/ExhaustSilencerOther__c.field-meta.xml
<CustomField>
    <fullName>ExhaustSilencerOther__c</fullName>
    <label>排気消音器＿その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>