force-app/main/default/objects/ProductSpecification__c/fields/ExistingManufacturer__c.field-meta.xml
<CustomField>
    <fullName>ExistingManufacturer__c</fullName>
    <label>既設メーカー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>