force-app/main/default/objects/ProductSpecification__c/fields/Factory1__c.field-meta.xml
<CustomField>
    <fullName>Factory1__c</fullName>
    <formula>TEXT( Factorys__r.Factory__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>製作所</label>
    <type>Text</type>
</CustomField>