force-app/main/default/objects/ProductSpecification__c/fields/FactoryRelationNo__c.field-meta.xml
<CustomField>
    <fullName>FactoryRelationNo__c</fullName>
    <label>場所別関連元番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>