force-app/main/default/objects/ProductSpecification__c/fields/Factorys__c.field-meta.xml
<CustomField>
    <fullName>Factorys__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>場所別</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>機器仕様</relationshipLabel>
    <relationshipName>Factorys</relationshipName>
    <type>Lookup</type>
</CustomField>