force-app/main/default/objects/ProductSpecification__c/fields/Field2SolarPowerPanelMakerOther__c.field-meta.xml
<CustomField>
    <fullName>Field2SolarPowerPanelMakerOther__c</fullName>
    <label>太陽電池パネルメーカーその他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>