force-app/main/default/objects/ProductSpecification__c/fields/FillerBox__c.field-meta.xml
<CustomField>
    <fullName>FillerBox__c</fullName>
    <label>給油口ボックス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無</fullName>
            </value>
            <value>
                <fullName>有（壁掛）</fullName>
            </value>
            <value>
                <fullName>有（自立）</fullName>
            </value>
            <value>
                <fullName>有（埋込）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>