force-app/main/default/objects/ProductSpecification__c/fields/FirefightingPatch__c.field-meta.xml
<CustomField>
    <fullName>FirefightingPatch__c</fullName>
    <label>消防ワッペン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>