force-app/main/default/objects/ProductSpecification__c/fields/Floors__c.field-meta.xml
<CustomField>
    <fullName>Floors__c</fullName>
    <inlineHelpText>設置場所で屋内を選んだ際の階数</inlineHelpText>
    <label>階数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>