force-app/main/default/objects/ProductSpecification__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>方式（単相）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>