force-app/main/default/objects/ProductSpecification__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>周波数</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50Hz</fullName>
            </value>
            <value>
                <fullName>60Hz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>