force-app/main/default/objects/ProductSpecification__c/fields/FuelSmallTank__c.field-meta.xml
<CustomField>
    <fullName>FuelSmallTank__c</fullName>
    <label>燃料小出槽(L)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>無</fullName>
            </value>
            <value>
                <fullName>490L</fullName>
            </value>
            <value>
                <fullName>950L</fullName>
            </value>
            <value>
                <fullName>1500L</fullName>
            </value>
            <value>
                <fullName>1950L</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>