force-app/main/default/objects/ProductSpecification__c/fields/FuelTransferPump__c.field-meta.xml
<CustomField>
    <fullName>FuelTransferPump__c</fullName>
    <label>燃料移送ポンプ(kW・台数)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>