force-app/main/default/objects/ProductSpecification__c/fields/FuelUsed__c.field-meta.xml
<CustomField>
    <fullName>FuelUsed__c</fullName>
    <label>使用燃料</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>軽油</fullName>
            </value>
            <value>
                <fullName>Ａ重油</fullName>
            </value>
            <value>
                <fullName>特Ａ重油</fullName>
            </value>
            <value>
                <fullName>灯油</fullName>
            </value>
            <value>
                <fullName>ガス</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>