force-app/main/default/objects/ProductSpecification__c/fields/GeneratorCapacity__c.field-meta.xml
<CustomField>
    <fullName>GeneratorCapacity__c</fullName>
    <label>発電機容量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>