force-app/main/default/objects/ProductSpecification__c/fields/InstallationEnvironmentTemperature__c.field-meta.xml
<CustomField>
    <fullName>InstallationEnvironmentTemperature__c</fullName>
    <label>設置環境温度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>