force-app/main/default/objects/ProductSpecification__c/fields/LEDPitch__c.field-meta.xml
<CustomField>
    <fullName>LEDPitch__c</fullName>
    <label>ＬＥＤピッチ（絵素構成）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDT4</fullName>
            </value>
            <value>
                <fullName>IDT6L</fullName>
            </value>
            <value>
                <fullName>IDT16</fullName>
            </value>
            <value>
                <fullName>IDT10</fullName>
            </value>
            <value>
                <fullName>ODT6</fullName>
            </value>
            <value>
                <fullName>ODQ8</fullName>
            </value>
            <value>
                <fullName>ODQ10</fullName>
            </value>
            <value>
                <fullName>ODX8</fullName>
            </value>
            <value>
                <fullName>ODT20</fullName>
            </value>
            <value>
                <fullName>ODQ12</fullName>
            </value>
            <value>
                <fullName>ODT16</fullName>
            </value>
            <value>
                <fullName>ODT10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>