force-app/main/default/objects/ProductSpecification__c/fields/LoadApplication__c.field-meta.xml
<CustomField>
    <fullName>LoadApplication__c</fullName>
    <label>負荷用途</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>コンピュータ</fullName>
            </value>
            <value>
                <fullName>通信</fullName>
            </value>
            <value>
                <fullName>コントローラ</fullName>
            </value>
            <value>
                <fullName>動力</fullName>
            </value>
            <value>
                <fullName>防災負荷</fullName>
            </value>
            <value>
                <fullName>電算負荷</fullName>
            </value>
            <value>
                <fullName>一般動力負荷</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>