force-app/main/default/objects/ProductSpecification__c/fields/LoadApplicationOther__c.field-meta.xml
<CustomField>
    <fullName>LoadApplicationOther__c</fullName>
    <label>負荷用途＿その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>