force-app/main/default/objects/ProductSpecification__c/fields/LocalArrangement__c.field-meta.xml
<CustomField>
    <fullName>LocalArrangement__c</fullName>
    <label>現地調整</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>