force-app/main/default/objects/ProductSpecification__c/fields/MainFuelTank__c.field-meta.xml
<CustomField>
    <fullName>MainFuelTank__c</fullName>
    <label>主燃料槽(L)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>無</fullName>
            </value>
            <value>
                <fullName>5000L</fullName>
            </value>
            <value>
                <fullName>10000L</fullName>
            </value>
            <value>
                <fullName>15000L</fullName>
            </value>
            <value>
                <fullName>20000L</fullName>
            </value>
            <value>
                <fullName>25000L</fullName>
            </value>
            <value>
                <fullName>30000L</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>