force-app/main/default/objects/ProductSpecification__c/fields/MELGOS__c.field-meta.xml
<CustomField>
    <fullName>MELGOS__c</fullName>
    <label>MELGOS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
                <default>true</default>
                <label>有</label>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>