force-app/main/default/objects/ProductSpecification__c/fields/MoldName__c.field-meta.xml
<CustomField>
    <fullName>MoldName__c</fullName>
    <label>形名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EVP-SS60B3-M7</fullName>
            </value>
            <value>
                <fullName>EVP-SS60B3-Y7</fullName>
            </value>
            <value>
                <fullName>EVP-SS60B3-Y7W</fullName>
            </value>
            <value>
                <fullName>EVP-SS60B3-M7-R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>