force-app/main/default/objects/ProductSpecification__c/fields/NumberOfParallelOperationDows__c.field-meta.xml
<CustomField>
    <fullName>NumberOfParallelOperationDows__c</fullName>
    <label>並列運転台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>