force-app/main/default/objects/ProductSpecification__c/fields/OperatingConditions__c.field-meta.xml
<CustomField>
    <fullName>OperatingConditions__c</fullName>
    <label>運転条件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24時間365日無停止</fullName>
            </value>
            <value>
                <fullName>●回/年停止可</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>