force-app/main/default/objects/ProductSpecification__c/fields/OperatingConditionsOther__c.field-meta.xml
<CustomField>
    <fullName>OperatingConditionsOther__c</fullName>
    <label>運転条件＿その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>