force-app/main/default/objects/ProductSpecification__c/fields/OperationFromFar__c.field-meta.xml
<CustomField>
    <fullName>OperationFromFar__c</fullName>
    <label>遠方運転・停止操作</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>